--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -1,21 +1,16 @@
 # The application settings for Android libSDL port
 
-AppSettingVersion=19
-
-# libSDL version to use (1.2 or 1.3, specify 1.3 for SDL2)
-LibSdlVersion=1.2
-
 # Specify application name (e.x. My Application)
 AppName="TeeWorlds"
 
 # Specify reversed site name of application (e.x. com.mysite.myapp)
 AppFullName=com.teeworlds
 
-# Specify screen orientation: (v)ertical/(p)ortrait or (h)orizontal/(l)andscape
-ScreenOrientation=h
+# Application version code (integer)
+AppVersionCode=06218
 
-# Do not allow device to sleep when the application is in foreground, set this for video players or apps which use accelerometer
-InhibitSuspend=y
+# Application user-visible version name (string)
+AppVersionName="0.6.2.18"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -24,6 +19,25 @@ InhibitSuspend=y
 # these files are put inside .apk package by build system
 # Also please avoid 'https://' URLs, many Android devices do not have trust certificates and will fail to connect to SF.net over HTTPS
 AppDataDownloadUrl="Game data|data.zip"
+
+# Reset SDL config when updating application to the new version (y) / (n)
+ResetSdlConfigForThisVersion=y
+
+# Delete application data files when upgrading (specify file/dir paths separated by spaces)
+DeleteFilesOnUpgrade="%"
+
+# Here you may type readme text, which will be shown during startup. Format is:
+# Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
+ReadmeText='Tap left joystick while aiming to launch hook\\\\nSwipe left joystick up or down to jump^ouya:'
+
+# libSDL version to use (1.2/1.3/2.0)
+LibSdlVersion=1.2
+
+# Specify screen orientation: (v)ertical/(p)ortrait or (h)orizontal/(l)andscape
+ScreenOrientation=h
+
+# Do not allow device to sleep when the application is in foreground, set this for video players or apps which use accelerometer
+InhibitSuspend=y
 
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
@@ -75,6 +89,10 @@ CompatibilityHacksSlowCompatibleEventQueue=n
 # Save and restore OpenGL state when drawing on-screen keyboard for apps that use SDL_OPENGL
 CompatibilityHacksTouchscreenKeyboardSaveRestoreOpenGLState=n
 
+# Application uses SDL_UpdateRects() properly, and does not draw in any region outside those rects.
+# This improves drawing speed, but I know only one application that does that, and it's written by me (y)/(n)
+CompatibilityHacksProperUsageOfSDL_UpdateRects=
+
 # Application uses mouse (y) or (n), this will show mouse emulation dialog to the user
 AppUsesMouse=y
 
@@ -83,6 +101,9 @@ AppNeedsTwoButtonMouse=n
 
 # Show SDL mouse cursor, for applications that do not draw cursor at all (y) or (n)
 ShowMouseCursor=n
+
+# Generate more touch events, by default SDL generates one event per one video frame, this is useful for drawing apps (y) or (n)
+GenerateSubframeTouchEvents=
 
 # Force relative (laptop) mouse movement mode, useful when both on-screen keyboard and mouse are needed (y) or (n)
 ForceRelativeMouseMode=n
@@ -113,6 +134,12 @@ AppUsesMultitouch=n
 # This option will add additional permission to Android manifest (y)/(n)
 AppRecordsAudio=n
 
+# Application needs to access SD card. If your data files are bigger than 5 Mb, enable it. (y) / (n)
+AccessSdCard=
+
+# Immersive mode - Android will hide on-screen Home/Back keys. Looks bad if you invoke Android keyboard. (y) / (n)
+ImmersiveMode=
+
 # Application implements Android-specific routines to put to background, and will not draw anything to screen
 # between SDL_ACTIVEEVENT lost / gained notifications - you should check for them
 # rigth after SDL_Flip(), if (n) then SDL_Flip() will block till app in background (y) or (n)
@@ -142,7 +169,7 @@ RedefinedKeysScreenKbNames="Hook Next_weapon Previous_weapon Show_scores Jump Fi
 # 0 = Ultimate Droid by Sean Stieber (green, with gamepad joystick)
 # 1 = Simple Theme by Beholder (white, with gamepad joystick)
 # 2 = Sun by Sirea (yellow, with round joystick)
-# 3 = Mystery by Gerstrong (unknown color, unknown joystick)
+# 3 = Keen by Gerstrong (multicolor, with round joystick)
 TouchscreenKeysTheme=2
 
 # Redefine gamepad keys to SDL keysyms, button order is:
@@ -169,18 +196,6 @@ MultiABI=all
 # Minimum amount of RAM application requires, in Mb, SDL will print warning to user if it's lower
 AppMinimumRAM=0
 
-# Application version code (integer)
-AppVersionCode=06217
-
-# Application user-visible version name (string)
-AppVersionName="0.6.2.17"
-
-# Reset SDL config when updating application to the new version (y) / (n)
-ResetSdlConfigForThisVersion=y
-
-# Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="%"
-
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
 # Available libraries: mad (GPL-ed!) sdl_mixer sdl_image sdl_ttf sdl_net sdl_blitpool sdl_gfx sdl_sound intl xml2 lua jpeg png ogg flac tremor vorbis freetype xerces curl theora fluidsynth lzma lzo2 mikmod openal timidity zzip bzip2 yaml-cpp python boost_date_time boost_filesystem boost_iostreams boost_program_options boost_regex boost_signals boost_system boost_thread glu avcodec avdevice avfilter avformat avresample avutil swscale swresample bzip2 
@@ -206,10 +221,6 @@ AppBuildExclude=''
 
 # Application command line parameters, including app name as 0-th param
 AppCmdline=''
-
-# Here you may type readme text, which will be shown during startup. Format is:
-# Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
-ReadmeText='Tap left joystick while aiming to launch hook\\\\nSwipe left joystick up or down to jump^ouya:'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
