--- a/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="GIMP Inkscape"
 AppFullName=org.gimp.inkscape
 
 # Application version code (integer)
-AppVersionCode=28212
+AppVersionCode=28213
 
 # Application user-visible version name (string)
-AppVersionName="2.8.2.12"
+AppVersionName="2.8.2.13"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -21,7 +21,7 @@ AppVersionName="2.8.2.12"
 AppDataDownloadUrl="!!Data files|:data.tar.gz:http://sourceforge.net/projects/libsdl-android/files/ubuntu/dist-gimp-wheezy.tar.gz/download^!!Data files|:DroidSansMono.ttf:DroidSansMono.ttf"
 
 # Reset SDL config when updating application to the new version (y) / (n)
-ResetSdlConfigForThisVersion=n
+ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
 DeleteFilesOnUpgrade="%"
@@ -160,24 +160,24 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="LALT UNDO NO_REMAP NO_REMAP UNDO HELP"
 
 # Number of virtual keyboard keys (currently 6 is maximum)
-AppTouchscreenKeyboardKeysAmount=0
+AppTouchscreenKeyboardKeysAmount=3
 
 # Redefine on-screen keyboard keys to SDL keysyms - 6 keyboard keys + 4 multitouch gestures (zoom in/out and rotate left/right)
-RedefinedKeysScreenKb="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINUS 1 2"
+RedefinedKeysScreenKb="LCTRL LALT LSHIFT RETURN SPACE DELETE KP_PLUS KP_MINUS 1 2"
 
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
-RedefinedKeysScreenKbNames="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINUS 1 2"
+RedefinedKeysScreenKbNames="LCTRL LALT LSHIFT RETURN SPACE DELETE KP_PLUS KP_MINUS 1 2"
 
 # On-screen keys theme
 # 0 = Ultimate Droid by Sean Stieber (green, with gamepad joystick)
 # 1 = Simple Theme by Beholder (white, with gamepad joystick)
 # 2 = Sun by Sirea (yellow, with round joystick)
 # 3 = Keen by Gerstrong (multicolor, with round joystick)
-TouchscreenKeysTheme=2
+TouchscreenKeysTheme=0
 
 # Redefine gamepad keys to SDL keysyms, button order is:
 # A B X Y L1 R1 L2 R2 LThumb RThumb
-RedefinedKeysGamepad="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINUS 1 2"
+RedefinedKeysGamepad="LCTRL LALT LSHIFT RETURN SPACE DELETE KP_PLUS KP_MINUS 1 2"
 
 # How long to show startup menu button, in msec, 0 to disable startup menu
 StartupMenuButtonTimeout=3000
@@ -223,7 +223,7 @@ AppSubdirsBuild=''
 AppBuildExclude=''
 
 # Application command line parameters, including app name as 0-th param
-AppCmdline='XSDL -nohelp -exec /data/data/org.gimp.inkscape/files/chroot.sh	bin/sh	./start-gimp.sh'
+AppCmdline='XSDL -nohelp -screenbuttons -exec /data/data/org.gimp.inkscape/files/chroot.sh	bin/sh	./start-gimp.sh'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
