--- a/project/jni/application/xrick/AndroidAppSettings.cfg
+++ b/project/jni/application/xrick/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="XRick"
 AppFullName=net.xrick.sdl
 
 # Application version code (integer)
-AppVersionCode=102121203
+AppVersionCode=102121205
 
 # Application user-visible version name (string)
-AppVersionName="021212.03"
+AppVersionName="021212.05"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -24,7 +24,7 @@ AppDataDownloadUrl="!Data size is 1 Mb|:data.zip:data.zip"
 ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="%"
+DeleteFilesOnUpgrade="libsdl-DownloadFinished-0.flag"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
@@ -223,7 +223,7 @@ AppSubdirsBuild='xrick-021212/src/* xrick-021212/include/*'
 AppBuildExclude=''
 
 # Application command line parameters, including app name as 0-th param
-AppCmdline=''
+AppCmdline='xrick'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
