--- a/project/jni/application/openttd-lowmem/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd-lowmem/AndroidAppSettings.cfg
@@ -24,7 +24,7 @@ AppDataDownloadUrl="!!Data files - 20 Mb|http://sourceforge.net/projects/libsdl-
 ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="baseset"
+DeleteFilesOnUpgrade="baseset .openttd/windows.cfg .openttd/hotkeys.cfg"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
